--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,6 +11,9 @@
         <% if(success_msg.length) { %>
         <div class="alert alert-success col-lg-12" style="text-align: center;"><%= success_msg %></div>
         <% } %>
+        <% if(error_msg.length) { %>
+        <div class="alert alert-danger col-lg-12" style="text-align: center;"><%= error_msg %></div>
+        <% } %>
     </div>
     <div class="row">
         <div class="col-lg-12" style="margin-bottom: 40px;text-align: center;">
