--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,15 +4,18 @@
             <li class="nav-item">
                 <a class="nav-link" href="/">Home</a>
             </li>
+            <% if(!user) {%>
             <li class="nav-item">
                 <a class="nav-link" href="/login">Login</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/signup">Signup</a>
             </li>
+            <% } else { %>
             <li class="nav-item">
                 <a class="nav-link" href="/logout">Logout</a>
             </li>
+            <% } %>
         </ul>
     </nav>
     <h3 class="text-muted">Login App</h3>
