--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -46,7 +46,7 @@
                 <input type="password" name="confirmPassword" class="form-control">
             </div>
 
-            <button type="submit" class="btn btn-success">Signin</button>
+            <button type="submit" class="btn btn-success">Signup</button>
         </form>
         <div class="col-log-3"></div>
     </div>
