--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,11 @@
                 <h1>Welocme to my Login application</h1>
             </div>
         </div>
+        <div class="row" style="margin-bottom: 40px;">
+            <h4>In this application you can signup, login, and edit your information.</h4>
+            <br>
+            <h4>I used Node.js, Express.js and mongodb in this project.</h4>
+        </div>
 
         <footer class="footer col-lg-12" style="text-align: center;">
             <p>&copy; 2017 , Login app by DANIAL:D</p>
