--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,7 +32,7 @@
                 <input type="password" name="password" class="form-control">
             </div>
 
-            <button type="submit" class="btn btn-success">Login</button>
+            <button type="submit" class="btn btn-success col-lg-12">Login</button>
         </form>
         <div class="col-log-3"></div>
     </div>
