--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -12,7 +12,6 @@
                 errors.forEach(function(error) { %>
         <div class="alert alert-danger col-lg-12"><%= error.msg %></div>
         <% })} %>
-
         <% if(error_msg.length) { %>
         <div class="alert alert-danger col-lg-12"><%= error_msg %></div>
         <% } %>
@@ -46,7 +45,7 @@
                 <input type="password" name="confirmPassword" class="form-control">
             </div>
 
-            <button type="submit" class="btn btn-success">Signup</button>
+            <button type="submit" class="btn btn-success col-lg-12">Signup</button>
         </form>
         <div class="col-log-3"></div>
     </div>
